crates/tui/tests/storybook/snapshots/app_message__compaction_preview_streaming_summary.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
───────────────────────── compacting ──────────────────────────
… 6 lines above
- Kept the final checkpoint marker separate.

# Next steps
Update stories and run focused tests.





  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
