crates/tui/tests/storybook/snapshots/app_message__compaction_preview_streaming_summary.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 64 16
  0   0  63 attrs=dim
  1   0  15 attrs=dim
  2   0  44 attrs=dim
  4   0  12 fg=AnsiValue(117) attrs=bold|dim
  5   0  37 attrs=dim
 11   0   6 fg=AnsiValue(208) attrs=bold
 11   6  19 fg=AnsiValue(244)
 11  25   2 fg=AnsiValue(244) attrs=dim
 11  27  35 fg=AnsiValue(244)
 12   0  64 fg=AnsiValue(237)
 13   1   1 fg=Black bg=White
 14   0  64 fg=AnsiValue(237)
 15   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 15  10  46 bg=AnsiValue(233)
 15  56   8 fg=AnsiValue(244) bg=AnsiValue(233)
