crates/tui/tests/storybook/snapshots/app_message__text_block_code_fence_no_language.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
Raw output:

hello
world

Done.


─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
