crates/tui/tests/storybook/snapshots/app_message__text_block_code_fence_no_language.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 60 12
  2   0   5 fg=Rgb { r: 248, g: 248, b: 242 } bg=AnsiValue(233)
  2   5  54 bg=AnsiValue(233)
  3   0   5 fg=Rgb { r: 248, g: 248, b: 242 } bg=AnsiValue(233)
  3   5  54 bg=AnsiValue(233)
  8   0   1 fg=AnsiValue(237)
  8   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  8   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  8   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  8   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  8   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
  8   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  8   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  8   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  8   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  8  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
  8  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
  8  13  47 fg=AnsiValue(237)
  9   1   1 fg=Black bg=White
 10   0  60 fg=AnsiValue(237)
 11   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 11  10  42 bg=AnsiValue(233)
 11  52   8 fg=AnsiValue(244) bg=AnsiValue(233)
