crates/tui/tests/storybook/snapshots/app_message__thinking_peek_suppresses_blank_only_omission.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 615
expression: frame.text()
---
│ first paragraph
│ second paragraph
│ third paragraph
│ fourth paragraph




─ ✿ working… ───────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
