crates/tui/tests/storybook/snapshots/app_message__thinking_peek_suppresses_blank_only_omission.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 616
expression: frame.styles_text()
---
dim: 72 12
  0   0  17 attrs=dim|italic
  1   0   2 attrs=dim|italic
  2   0  18 attrs=dim|italic
  3   0  17 attrs=dim|italic
  4   0  18 attrs=dim|italic
  8   0   1 fg=AnsiValue(237)
  8   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  8   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  8   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  8   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  8   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
  8   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  8   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  8   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  8   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  8  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
  8  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
  8  13  59 fg=AnsiValue(237)
  9   1   1 fg=Black bg=White
 10   0  72 fg=AnsiValue(237)
 11   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 11  10  54 bg=AnsiValue(233)
 11  64   8 fg=AnsiValue(244) bg=AnsiValue(233)
